Academy collection and test document created Added jackson-bind dependency for automatic json handling. Model, controller, service, and repository classes are created for Academy. The lombok dependency is added to handle getter and setter automatically

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 		</dependency>
+		<!--Lombok for getter and setter easily -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<!--Jackson-databind for json in response http  -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
