Update module - add exception handling -add  dtos - The method to update modules is added - The exception handling is added - The path dtos is added and the dto to update a module is created

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 		</dependency>
+		<!--Hibernate validator-->
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.0.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
