--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port= 8081
 server.servlet.context-path=/api
 spring.data.mongodb.database=dbAKdevmy
 spring.data.mongodb.uri=mongodb+srv://proyectosemillersoftlond2023:9wmMGugx9qr4a7jR@dbakdevmy.gsrlzpc.mongodb.net/?retryWrites=true&w=majority
-
+# swagger
+springdoc.api-docs.path=/api-docs
